--- a/style.css
+++ b/style.css
@@ -2,16 +2,18 @@ body {
   font-family: "Arial Nova", Arial,  Helvetica, sans-serif;
 }
 #container {
-  position: relative;
-  width: 400px;
   margin: 0 auto;
 }
 #header {
+  position: relative;
+  margin: 0 auto;
+  width: 400px;
   display: flex;
-  background-color: #FF0;
 }
 #output {
-  background: #F00;
+  position: relative;
+  margin: 0 auto;
+  display: flex;
 }
 input {
   font-family: "Arial Nova", Arial,  Helvetica, sans-serif;
@@ -29,24 +31,56 @@ input {
   flex: 0 1 auto;
   align-self: center;
 }
-
-.element {
-  margin: 5px 5px;
-  background-color: #F0F;
+.element, .space {
+  margin: 5px;
   width: 100px;
   height: 120px;
   position: relative;
+}
+.space {
+  width: 10px;
+}
+.alkali {
+  background-color: #7099c4;
+}
+.alkaline_earth {
+  background-color: #3a5b84;
+}
+.metalloid {
+  background-color: #3e103d;
+}
+.other_nonmetal {
+  background-color: #1a274a;
+}
+.noble_gas {
+  background-color: #190e29;
+}
+.lanthanoid {
+  background-color: #7b445c;
+}
+.actinoid {
+  background-color: #613141;
+}
+.undefined {
+  background-color: #342c2c;
+}
+.post-transition {
+  background-color: #5a2245;
+}
+.transition {
+  background-color: #904d57;
 }
 .element p {
   text-align: center;
   margin: 0;
   position: absolute;
   width: 100%;
+  color: #fffc;
 }
 p.number {
   font-size: 12px;
   top: 5%;
-  width: 20%;
+  width: 25%;
 }
 p.symbol {
   font-size: 40px;
