Allows impossible words to be possible with placeholder elements.

--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ input[type="text"] {
   position: relative;
   float: left;
 }
+.fake {
+  background-color: #000;
+}
 .alkali {
   background-color: #7099c4;
 }
